--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0;
     padding: 0;
+    background-image: url("../images/interlaced.png");
 }
 header {
-    border-bottom: 1px solid grey; 
-
+    border-bottom: 2px solid #cccccc; 
+    background-color: white;
 
 }
 h1 {
@@ -14,40 +15,61 @@ h1 {
     color: white;
     float: left;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0 0 0 200px;
+    margin: 0 0 0 175px;
 }
 
 nav {
-    float: right;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
- 
+    float: right;
+    margin: 26px 26px 0 0;
+    
+    
 }
 
 a {
     text-decoration: none;
-    color
+    color: #777777;
+    padding: 0 6px 0 6px;
 }
 
+#linkborder {
+    border-right: 1px solid #cccccc;
+
+}
 section {
-    margin-top: 26px;
+    padding: 50px;
+    margin-top: 26px; 
+   
 
 }
-
 
 .contentarea {
     width: 960px;
-    background-color: white;
+    background-color: #ffffff;
     margin: 0 auto;
-    border: 1px solid grey;
+    border: 1px solid #cccccc;
+
 }
 .profileimage {
     float: left;
     width: 200px;
-    margin-right: 16px;
+    margin: 16px 16px 0 0;
 }
 .clearfix::after {
     content: "";
     clear: both;
     display: block;
+}
+
+h2 {
+    color: #4aaaa5;
+    border-bottom: 3px solid #cccccc;
+    padding: 16px;
+    margin: 0 16px 0 16px;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+
 }
