updated image gallery text-box on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,24 +43,6 @@ section {
 
 }
 
-.contentarea {
-    width: 960px;
-    background-color: #ffffff;
-    margin: 0 auto;
-    border: 1px solid #cccccc;
-
-}
-.profileimage {
-    float: left;
-    width: 200px;
-    margin: 16px 16px 16px ;
-}
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
 h2 {
     color: #4aaaa5;
     border-bottom: 3px solid #cccccc;
@@ -73,3 +55,44 @@ p {
     color: #777777;
 
 }
+
+.gallery {
+    width: 200px;
+    float: left;
+    margin: 16px;
+}
+
+.contentarea {
+    width: 960px;
+    background-color: #ffffff;
+    margin: 0 auto;
+    border: 1px solid #cccccc;
+
+}
+.profileimage {
+    float: left;
+    width: 200px;
+    margin: 16px 16px 16px ;
+}
+
+.imgcontainer {
+    position: relative;
+}
+.text-block {
+    background-color: #4aaaa5;
+    position: absolute;
+    top: 115px;
+    left: 75px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 16px;
+
+   
+    
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
