--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,16 +9,17 @@ header {
 
 }
 h1 {
+    margin: 0 0 0 17%;
     background-color: #4aaaa5;
     padding: 26px;
     text-align: center;
     color: white;
     float: left;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0 0 0 50px;
 }
 
 nav {
+
     font-family: Georgia, 'Times New Roman', Times, serif;
     float: right;
     margin: 26px 26px 0 0;
@@ -97,4 +98,3 @@ p {
     clear: both;
     display: block;
 }
-
